...
            android:lineSpacingExtra="5dp"
            android:text="@string/faveo_content"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            android:background="@drawable/button_background"
            android:text="@string/website"
            android:textColor="@color/white" />
...
