<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical">

    <!--<ProgressBar-->
    <!--android:id="@+id/progress_bar"-->
    <!--style="@style/Widget.AppCompat.ProgressBar"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center_horizontal"-->
    <!--android:layout_marginTop="54dp"-->
    <!--android:visibility="gone" />-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:id="@+id/toolbarview"
        android:visibility="gone"
        >
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbarfilteration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppThemeOverlay.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:visibility="gone"
            android:overScrollMode="always"
            android:layout_weight="1"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/filter"
                    android:textColor="#808080"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    />

                <ImageView
                    android:layout_width="18dp"
                    android:layout_height="18dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginEnd="22dp"
                    android:background="@drawable/ic_if_filter_383135"
                    android:foregroundGravity="clip_vertical" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
        <View
            android:id="@+id/separationView"
            android:layout_width="1dp"
            android:visibility="gone"
            android:background="@color/faveo"
            android:layout_height="match_parent"
            >
        </View>
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppThemeOverlay.ActionBar"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            android:visibility="gone"
            android:overScrollMode="always"
            android:layout_weight="1">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/toolbartextview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="249dp"
                    android:layout_marginTop="0dp"
                    android:gravity="center_vertical"
                    android:text="@string/sort_by"
                    android:textColor="#808080"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>

    </LinearLayout>
    <View
        android:id="@+id/separationview"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#DCDCDC"
        />
    <TextView
        android:id="@+id/noiternet_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:drawableTint="@color/dark_translucent"
        android:drawableTop="@drawable/ic_signal_wifi_off_black_48dp"
        android:text="@string/no_internet_connection"
        android:textColor="@color/dark_translucent"
        android:textSize="28sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/empty_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:drawableTint="@color/dark_translucent"
        android:drawableTop="@drawable/ic_inbox_black_48dp"
        android:text="@string/no_records"
        android:textColor="@color/dark_translucent"
        android:textSize="28sp"
        android:visibility="gone" />



    <!--<android.support.design.widget.AppBarLayout-->
    <!--android:id="@+id/appBarLayout"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:elevation="4dp"-->
    <!--android:theme="@style/AppThemeOverlay.ActionBar">-->
    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="vertical">-->

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:padding="1dp"
        >

        <com.cooltechworks.views.shimmer.ShimmerRecyclerView
            android:id="@+id/cardList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:demo_child_count="10"
            app:demo_layout="@layout/card_ticket_shimmer" />



    </android.support.v4.widget.SwipeRefreshLayout>

    <RelativeLayout
        android:id="@+id/expandMore"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:visibility="gone"
        >

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:background="@color/grey_200">

        </View>

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="154dp"
            android:background="@drawable/shape"
            android:src="@drawable/ic_expand_more_black_24dp"
            android:tint="@color/faveo" />
    </RelativeLayout>
    <TextView
        android:layout_width="380dp"
        android:layout_height="20dp"
        android:text="3 more"
        android:fontFamily="@font/hintedlainesansregular"
        android:id="@+id/totalcount"
        android:textColor="@color/faveo"
        android:gravity="top|center"
        android:visibility="gone"/>


</LinearLayout>
