...
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="end|bottom"-->
    <!--android:layout_margin="@dimen/fab_margin"-->
    <!--app:srcCompat="@android:drawable/ic_dialog_email" />-->

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:background="#154c66"
        android:theme="@style/AppThemeOverlay.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="@drawable/background_square"
            app:popupTheme="@style/AppThemeOverlay.ActionBar"
            android:paddingStart="5dp"
...
