...
    card_view:contentPadding="2dp"
    android:elevation="5dp"
    android:layout_marginBottom="-3dp"
    >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/client"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:paddingBottom="4dp"
    android:backgroundTint="@color/colorAccent"
    android:paddingLeft="5dp"
    android:paddingRight="16dp"
...
