//package co.helpdesk.faveo.pro.frontend.activities;
//
//
//import android.support.test.espresso.ViewInteraction;
//import android.support.test.espresso.matcher.ViewMatchers;
//import android.support.test.rule.ActivityTestRule;
//import android.support.test.runner.AndroidJUnit4;
//import android.test.suitebuilder.annotation.LargeTest;
//
//import org.junit.Rule;
//import org.junit.Test;
//import org.junit.runner.RunWith;
//
//import co.helpdesk.faveo.pro.R;
////import co.helpdesk.faveo.pro.SplashScreen;
//
//import static android.support.test.espresso.Espresso.onView;
//import static android.support.test.espresso.Espresso.pressBack;
//import static android.support.test.espresso.action.ViewActions.click;
//import static android.support.test.espresso.action.ViewActions.closeSoftKeyboard;
//import static android.support.test.espresso.action.ViewActions.replaceText;
//import static android.support.test.espresso.action.ViewActions.scrollTo;
//import static android.support.test.espresso.matcher.ViewMatchers.isDisplayed;
//import static android.support.test.espresso.matcher.ViewMatchers.withContentDescription;
//import static android.support.test.espresso.matcher.ViewMatchers.withId;
//import static android.support.test.espresso.matcher.ViewMatchers.withParent;
//import static android.support.test.espresso.matcher.ViewMatchers.withText;
//import static org.hamcrest.Matchers.allOf;
//
//@LargeTest
//@RunWith(AndroidJUnit4.class)
//public class AllFragmentsTest {
//
//    @Rule
//    public ActivityTestRule<SplashScreen> mActivityTestRule = new ActivityTestRule<>(SplashScreen.class);
//
//    @Test
//    public void allFragmentsTest() {
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3596988);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton2 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(ViewMatchers.withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton2.perform(click());
//
//        ViewInteraction relativeLayout = onView(
//                withId(R.id.my_tickets));
//        relativeLayout.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        pressBack();
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(2500);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton5 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton5.perform(click());
//
//        ViewInteraction relativeLayout2 = onView(
//                withId(R.id.unassigned_tickets));
//        relativeLayout2.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(86400000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton6 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton6.perform(click());
//
//        ViewInteraction relativeLayout3 = onView(
//                withId(R.id.closed_tickets));
//        relativeLayout3.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(604800000);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton7 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton7.perform(click());
//
//        ViewInteraction relativeLayout4 = onView(
//                withId(R.id.trash_tickets));
//        relativeLayout4.perform(scrollTo(), click());
//
//        ViewInteraction appCompatImageButton8 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton8.perform(click());
//
//        ViewInteraction linearLayout = onView(
//                withId(R.id.client_list));
//        linearLayout.perform(scrollTo(), click());
//
//        ViewInteraction appCompatImageButton9 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton9.perform(click());
//
//        ViewInteraction linearLayout2 = onView(
//                withId(R.id.settings));
//        linearLayout2.perform(scrollTo(), click());
//
//        ViewInteraction appCompatImageButton10 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton10.perform(click());
//
//        ViewInteraction linearLayout3 = onView(
//                withId(R.id.about));
//        linearLayout3.perform(scrollTo(), click());
//
//        ViewInteraction appCompatButton2 = onView(
//                allOf(withId(R.id.button_website), withText("Website"), isDisplayed()));
//        appCompatButton2.perform(click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3513163);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatImageButton11 = onView(
//                allOf(withContentDescription("Open"),
//                        withParent(allOf(withId(R.id.toolbar),
//                                withParent(withId(R.id.appBarLayout)))),
//                        isDisplayed()));
//        appCompatImageButton11.perform(click());
//
//        ViewInteraction linearLayout4 = onView(
//                withId(R.id.logout));
//        linearLayout4.perform(scrollTo(), click());
//
//        ViewInteraction appCompatButton3 = onView(
//                allOf(withId(android.R.id.button2), withText("no")));
//        appCompatButton3.perform(scrollTo(), click());
//
//        ViewInteraction linearLayout5 = onView(
//                withId(R.id.logout));
//        linearLayout5.perform(scrollTo(), click());
//
//        ViewInteraction appCompatButton4 = onView(
//                allOf(withId(android.R.id.button1), withText("yes")));
//        appCompatButton4.perform(scrollTo(), click());
//
//        // Added a sleep statement to match the app's execution delay.
//        // The recommended way to handle such scenarios is to use Espresso idling resources:
//        // https://google.github.io/android-testing-support-library/docs/espresso/idling-resource/index.html
//        try {
//            Thread.sleep(3583095);
//        } catch (InterruptedException e) {
//            e.printStackTrace();
//        }
//
//        ViewInteraction appCompatAutoCompleteTextView4 = onView(
//                allOf(withId(R.id.editText_company_url), isDisplayed()));
//        appCompatAutoCompleteTextView4.perform(replaceText("http://"), closeSoftKeyboard());
//
//    }
//
//}
